01-07-2008
 * fix a problem caused by removing the last unnecessary alloc
 * strip leading-, and trailing spaces from the string before comparing
 * fix a problem where trailing spaces weren't removed

30-06-2008:
 * some small changes; fix some typo's and fix a small memory leak
 * update the documentation in README
 * remove the last unnecessary alloc

29-06-2008:
 * rename xmlGet(Int/Double/String) to xmlGetNode(Int/Double/String)
 * add new xmlGet(Int/Double/String) functions
 * rename xmlCompareString to xmlCompareNodeString for consistency
 * rename xmlCompareElement to xmlCompareString for consistency
 * add a README file with short examples of various functions

27-06-2008:
 * removed some memory allocation in xmlGetNode and XMLGetNextElement
 * use the file-size for mmap and remove the root node from the xml-id
 * rearrange xmlGetNode to work with complicated xml files
 * add the xmlMarkId function to save the id before using xmlGetNextElement
 * speed up xmlGetNextId

23-06-2008: Initial release